--- a/mybatisStudy/Study_01/pom.xml
+++ b/mybatisStudy/Study_01/pom.xml
@@ -9,31 +9,31 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>mybatis-01</artifactId>
+  <artifactId>Study_01</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
-
   <build>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
         <includes>
-          <include>**/*.xml</include>
           <include>**/*.properties</include>
+          <include>**/*.xml</include>
         </includes>
         <filtering>true</filtering>
       </resource>
       <resource>
         <directory>src/main/java</directory>
         <includes>
-          <include>**/*.xml</include>
           <include>**/*.properties</include>
+          <include>**/*.xml</include>
         </includes>
         <filtering>true</filtering>
       </resource>
     </resources>
   </build>
+
 </project>
