--- a/mybatisStudy/pom.xml
+++ b/mybatisStudy/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>mybatis-01</module>
       <module>Study_01</module>
+      <module>mybatis-02</module>
     </modules>
     <dependencies>
         <!--mysql驱动-->
@@ -33,6 +34,13 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
