--- a/mybatisStudy/pom.xml
+++ b/mybatisStudy/pom.xml
@@ -12,6 +12,7 @@
     <module>Study_01</module>
     <module>mybatis-02</module>
     <module>mybatis-03</module>
+    <module>mybatis-05</module>
   </modules>
   <dependencies>
     <!--mysql驱动-->
